--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,3 +1,5 @@
-<p>
-  products works!
-</p>
+<div class="row products">
+  <div *ngFor="let product of products" class="col-sm-3 col-xs-6">
+    <product [product]="product"></product>
+  </div>
+</div>
