--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,5 +1,5 @@
 <div class="row products">
-  <div *ngFor="let product of products" class="col-sm-3 col-xs-6">
-    <product [product]="product"></product>
+  <div *ngFor="let product of products | async" class="col-sm-3 col-xs-6">
+    <app-product [product]="product"></app-product>
   </div>
 </div>
